--- a/form.css
+++ b/form.css
@@ -16,6 +16,16 @@ label {
   text-transform: uppercase;
 }
 
+.alert {
+  width: 80vw;
+  margin: 2rem auto;
+  background-color: #d4edda;
+  color: #155724;
+  padding: .75rem 1.25rem;
+  border-radius: .25rem;
+  display: none;
+}
+
 #save-later-form {
   position: relative;
   width: 80vw;
@@ -47,12 +57,18 @@ input:hover {
   color: black;
 }
 
-input[type="button"] {
+button[type="submit"] {
   background-color: #349bab;
   width: calc((100% / 2) - 3px);
   display: inline-block;
   color: white;
-  font-weight: 500;
+  font-weight: 600;
+  height: 2.8rem;
+  border: none;
+  font-family: Nunito;
+  font-size: 1rem;
+  cursor: pointer;
+  outline: none;
 }
 
 #save {
@@ -66,6 +82,12 @@ select {
   border: none;
   padding: 0 0 0 0.5rem;
   outline: none;
+}
+
+select:focus,
+input:focus,
+textarea:focus {
+  outline: #349bab solid 1px;
 }
 
 textarea {
@@ -84,13 +106,15 @@ textarea {
 
 /* ========MEDIA QUERIES======== */
 @media screen and (min-width: 768px) {
-  #save-later-form {
+  #save-later-form,
+  .alert {
     width: 60vw;
   }
 }
 
 @media screen and (min-width: 992px) {
-  #save-later-form {
+  #save-later-form,
+  .alert {
     width: 40vw;
   }
 }
