--- a/form.css
+++ b/form.css
@@ -21,8 +21,8 @@ label {
   margin: 2rem auto;
   background-color: #d4edda;
   color: #155724;
-  padding: .75rem 1.25rem;
-  border-radius: .25rem;
+  padding: 0.75rem 1.25rem;
+  border-radius: 0.25rem;
   display: none;
 }
 
